[tool.poetry]
name = "act-nxtbus-api"
version = "0.1.0"
description = "Python wrapper for Transport Canberra's NXTBUS API."
authors = ["king-millez <millez.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
bs4 = "^0.0.1"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
